--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  save_chosen: "Сохранить выбор"
   filter: "Отфильтровать"
   choose_nomination: "Выбрать номинацию"
   competition_rules: "Положение о конкурсе"
