Restriction on photo load 0.2m 1000px

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -179,6 +179,13 @@ ru:
   choose_competition: "Сделать выбор"
   jury_choose_competition: "Текущие конкурсы"
   
+  errors:
+    messages:
+      carrierwave_processing_error: "Cannot resize image."
+      carrierwave_integrity_error: "Not an image."
+      carrierwave_download_error: "Couldn't download image."
+      extension_white_list_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
+      extension_black_list_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
   # Для ответов на запросы на конкурсы
   responses:
     awaiting: "Ожидает рассмотрения"
