--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,6 +179,14 @@ en:
   choose_photo: "Choose photos"
   choose_competition: "Choose"
   jury_choose_competition: "Current competition"
+
+  errors:
+    messages:
+      carrierwave_processing_error: "Cannot resize image."
+      carrierwave_integrity_error: "Not an image."
+      carrierwave_download_error: "Couldn't download image."
+      extension_white_list_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
+      extension_black_list_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
   # Для ответов на запросы на конкурсы
   responses:
     awaiting: "Awaiting"
