--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -9,7 +9,7 @@ ru:
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
     error_notification:
-      default_message: "Возникла ошибка при сохранении. Возможно, Вы забыли заполнить необходимое поле."
+      default_message: "Возникла ошибка при сохранении. Возможно, Вы забыли заполнить необходимое поле или заполнили его некорректно."
     # Labels and hints examples
     labels:
       defaults:
