Competition -> contest yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,7 +25,7 @@ en:
   save_chosen: "Save chosen"
   filter: "Filter"
   choose_nomination: "Choose nomination"
-  competition_rules: "Competition rules"
+  competition_rules: "Contest rules"
   authors_description: "Users loaded 1 or more photos"
   about_me: "About me"
   last_photos: "Last photos"
@@ -37,12 +37,12 @@ en:
   place: "Place"
   rating: "Raiting"
   competition_results: "Results: "
-  participate_in_competition: "It's forbidden to remove photography participating in a competition."
-  competition_photos: "Competition photos"
+  participate_in_competition: "It's forbidden to remove photography participating in a contest."
+  competition_photos: "Contest photos"
   participate: "Participate"
   see_hints: "See hints below"
   hints: "hints"
-  competition_info: "Competition information"
+  competition_info: "Contest information"
   no_photo_loaded: "No photos loaded yet, press button above."
   loaded_photos: "Loaded photos."
   load_photos: "Load photos"
@@ -132,7 +132,7 @@ en:
   exceeded_paid_nominations: "Exceeded paid nominations limit"
   profile_empty: "You should fill your profile according to FIAP rules."
   gallery: "Photographies"
-  contests: "Competitions"
+  contests: "Contests"
   news: "News"
   project_name: "TDP"
   sign_in: "Sign in"
@@ -153,7 +153,7 @@ en:
   new: "New"
   edit_user: "Edit profile"
   last_photos: "Last photos"  
-  competition_: "Competition"
+  competition_: "Contest"
   status: "Status"
   avatar_picture: "Avatar"
   more_articles: "More articles..."
@@ -194,7 +194,7 @@ en:
     awaiting: "Awaiting"
     accepted: "Accepted"
     no_money: "Please pay money for participation."
-    no_condition: "Competition terms was not met"
+    no_condition: "Contest terms was not met"
     other_reasons: "Other reason. Contact admin"
     no_decision: "No decision"
     banned: "banned"
@@ -232,15 +232,15 @@ en:
       title: "Title"   
   competitions:
       new:
-        new: "New competition"
+        new: "New contest"
       index:
-        list: "Competitions"
+        list: "Contests"
         results: "Results"
         title: "Title"
         accept_date: "Accept date"
         last_date: "Submissions to"
         open_date: "Notification" 
-        type: "Competition type"     
+        type: "Contest type"     
       aply:
         choose_photo: "Choose photo"
         choose_photo_title: "Choose photos"
@@ -280,7 +280,7 @@ en:
       new: "New"
   competition_requests:
     index:
-      title: "Competitions"
+      title: "Contest"
       user_name: "Username"
       decision: "Desicion"
       requests: "Request"
