--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
   competition_rules: "Contest rules"
   authors_description: "Users loaded 1 or more photos"
   about_me: "About me"
-  last_photos: "Last photos"
+  last_photos: "Recent photos"
   recommended_article: "Recommended article"
   main_novelty: "Main news"
   tdp_presents: "The Tyumen House of Photography presents to your attention a virtual exhibition"
@@ -54,7 +54,7 @@ en:
   on_site_photos: "Site galleries"
   on_user_photos: "User photos"
   subscriptions: "Subscriptions"
-  tags: "Tag"
+  tags: "Tags"
   author: "Author"
   rules: "Terms"
   about_us: "About us"
@@ -137,8 +137,8 @@ en:
   project_name: "TDP"
   sign_in: "Sign in"
   sign_out: "Sign out"
-  forgot_password: "Forget your password?"
-  did_not_recieved_confirmation: "Did not recieved confirmation?"
+  forgot_password: "Forgot your password?"
+  did_not_recieved_confirmation: "Did not recieve confirmation?"
   paricipate_in_competition: "This photography can not be deleted."
   photo_was_deleted: "Photo was deleted"
   incorrect_last_date: "Дата сдачи работ должна быть до даты открытия конкурса"
@@ -152,7 +152,7 @@ en:
   more: "...more"
   new: "New"
   edit_user: "Edit profile"
-  last_photos: "Last photos"  
+  last_photos: "Recent photos"  
   competition_: "Contest"
   status: "Status"
   avatar_picture: "Avatar"
