Add img to more novelties on index

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -166,7 +166,7 @@ ru:
   more: "...еще"
   new: "Новая запись"
   edit_user: "Редактировать личные данные"
-  last_photos: "Последние фотографии"  
+  last_photos: "Новые фотографии"  
   competition_: "Конкурс"
   status: "Статус"
   avatar_picture: "Картинка аватара"
