--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  show_main_header: "Показывать главный заголовок"
   message_sent: "Сообщение отправлено"
   start_conversation: "Написать сообщение"
   inbox: "Входящие"
