Check profile before request. Fix date in profile edit.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,7 +200,7 @@ en:
     accepted: "Accepted"
     no_money: "Please pay money for participation."
     no_condition: "Contest terms was not met"
-    other_reasons: "Other reason. Contact admin"
+    other_reasons: "Please contact admin"
     no_decision: "No decision"
     banned: "banned"
   # photos: "PHH"
