Поменял перевод cancel_account

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -182,7 +182,7 @@ ru:
   change_password: "Личные данные"
   we_need_your_current_password: "Нам нужен Ваш текущий пароль для подтверждения изменений"
   leave_it_blank: "Оставте это поле пустым, если не хотите менять пароль."
-  cancel_account: "Закрыть мою учетную запись"
+  cancel_account: "Удалить мою учетную запись"
   profile: "Профиль"
   sign_up: "Регистрация"
   cloud: "Облако тегов" 
