--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -215,7 +215,7 @@ ru:
   responses:
     awaiting: "Ожидает рассмотрения"
     accepted: "Заявка утверждена."
-    no_money: "Заявка принята. Просьба оплатить участие."
+    no_money: "Заявка обработана. Ожидание оплаты."
     no_condition: "Отказ. Не выполнены условия участия."
     other_reasons: "Отказ. Иная причина."
     awaiting: "Ожидает рассмотрения"
