--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -34,6 +34,11 @@ en:
         last_name: 'Last name'
         remember_me: 'Remember me'
         adress: 'Address'
+        zip_code: 'Zip'
+        city: 'City'
+        country: 'Country'
+        phone: 'Phone'
+        password: 'Password'
         about: 'About'
         digest: "digest"
         content: "Content"
