--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -39,6 +39,7 @@ en:
         country: 'Country'
         phone: 'Phone'
         password: 'Password'
+        current_password: 'Current password'
         about: 'About'
         digest: "digest"
         content: "Content"
