--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  nomination_: 'Nomination'
+  nom: 'Nomination'
   photos_: 'Photos'
   unrated: 'unrated'
   update: 'Update'
