Add jury_date, remove jury_closed

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -271,6 +271,7 @@ ru:
         accept_date: "Дата начала приема"
         last_date: "Последний срок сдачи работ"
         open_date: "Дата оглашения результатов"
+        jury_date: "Голосовать до"
         type: "Тип конкурса"     
       aply:
         choose_photo: "Выберите фотографии"
@@ -355,6 +356,7 @@ ru:
         title: "Название"
         last_date: "Дата сдачи работ"
         open_date: "Дата открытия"
+        jury_date: "Голосовать до"
         accept_date: "Дата начала приема"
         new: "Новый конкурс"
       view_posted:
