--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ru:
+  friends: 'Друзья'
   сompetition_title: "Название"
   results: "Итоги"
   title: "Название"
