--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  friends: 'Friends'
   _competitions: 'Competitions'
   photofinishes: 'Photofinshes'
   photo_title: "Title"
