--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -157,7 +157,7 @@ ru:
   complaint: "Жалоба"
   proposal: "Предложение"
   contest: "Конкурс"
-  comments: "Коментарии"
+  comments: "комментарии"
   portfolio: "Портфолио"
   review: "Ревью"
   deleted: "Файл будет удален"
