--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -288,6 +288,8 @@ ru:
       new:
         new: "Новый конкурс"
       index:
+        old: 'Прошедшие конкурсы'
+        current: 'Теущие конкурсы'
         list: "Конкурсы"
         results: "Итоги"
         title: "Название"
